# bldcMortar-drive

./: CMakeLists.txt  README.md  mortar_board2.overlay  prj.conf
boards/arm/mortar_board2/: Kconfig.board  Kconfig.defconfig  mortar_board2-pinctrl.dtsi  mortar_board2.dts  mortar_board2.yaml  mortar_board2_defconfig
docs/: register-values-example.csv
src/: bldc_driver.c  bldc_driver.h  ble_comm.c  ble_comm.h  command_decoder.c  command_decoder.h  encoder_reader.c  encoder_reader.h  gps.c  gps.h  main.c  settings.c  settings.h  usb_comm.c  usb_comm.h
